# geo_risk_app

./: .env.example  .gitignore  BACKEND_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Makefile  README.md  RISK_ASSESSMENT_GUIDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  test-deployment.sh  validate-deployment.sh  validate_docs.sh
backend/: .dockerignore  .env.example  .gitignore  CODE_REVIEW_REPORT.md  Dockerfile  EXPORT_SERVICE_DOCUMENTATION.md  MODELS_SCHEMAS_IMPLEMENTATION.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  README.md  REVIEW_SUMMARY.md  RISK_ENGINE_DOCUMENTATION.md  alembic.ini  init_db.py  pyproject.toml  quick_performance_test.py  requirements.txt  run.py  run_performance_tests.py  validate_performance.sh  verify_export_service.py  verify_implementation.py  verify_models_schemas.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_performance_indexes.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  analytics.py  export.py  hazards.py  historical.py  locations.py  risk.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  hazard.py  location.py  risk_assessment.py
backend/app/routes/: health.py  risk_assessment.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  analytics_service.py  caching_service.py  export_service.py  risk_engine.py  risk_service.py
backend/tests/: __init__.py  conftest.py
(+73 files in other folders)
